{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 63,
  "lineage": "febac4ac-400a-d207-d2d1-64c55f14767b",
  "resources": [
    {
      "module": "module.samsung-cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fb_cluster_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b09f36be67d32fff",
            "arn": "arn:aws:ec2:us-east-2:977373308795:instance/i-0d8c02e5d3e02b13c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-0aec666a06a62cf56",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "gauntlet-wFQOOzXB51R3ebr-fb_cluster_node_profile",
            "id": "i-0d8c02e5d3e02b13c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.xlarge",
            "ipv6_address_count": 0,
            "key_name": "gauntlet-wFQOOzXB51R3ebr-gitlab-ci",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0c80f27ddcedba46a",
            "private_dns": "ip-10-0-1-141.us-east-2.compute.internal",
            "private_ip": "10.0.1.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d9377bbf488e54ef",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050b1219d78f2db1b",
            "tags": {
              "Name": "gauntlet-wFQOOzXB51R3ebr-featurebase-cluster-0",
              "Prefix": "gauntlet-wFQOOzXB51R3ebr",
              "Role": "cluster_node"
            },
            "tags_all": {
              "Name": "gauntlet-wFQOOzXB51R3ebr-featurebase-cluster-0",
              "Prefix": "gauntlet-wFQOOzXB51R3ebr",
              "Role": "cluster_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09c4419bed8bf5876"
            ]
          },
          "dependencies": [
            "module.samsung-cluster.aws_iam_instance_profile.fb_cluster_node_profile",
            "module.samsung-cluster.aws_iam_role.fb_cluster_node_role",
            "module.samsung-cluster.aws_key_pair.gitlab-featurebase-ci",
            "module.samsung-cluster.aws_security_group.featurebase",
            "module.samsung-cluster.data.aws_ami.amazon_linux_2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b09f36be67d32fff",
            "arn": "arn:aws:ec2:us-east-2:977373308795:instance/i-0e50a8965846142ca",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-0b02da40377abf65d",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "gauntlet-wFQOOzXB51R3ebr-fb_cluster_node_profile",
            "id": "i-0e50a8965846142ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.xlarge",
            "ipv6_address_count": 0,
            "key_name": "gauntlet-wFQOOzXB51R3ebr-gitlab-ci",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0bdf01f21c7c83aa7",
            "private_dns": "ip-10-0-2-81.us-east-2.compute.internal",
            "private_ip": "10.0.2.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0598ebf8df0eaf12f",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d623c769e086e46e",
            "tags": {
              "Name": "gauntlet-wFQOOzXB51R3ebr-featurebase-cluster-1",
              "Prefix": "gauntlet-wFQOOzXB51R3ebr",
              "Role": "cluster_node"
            },
            "tags_all": {
              "Name": "gauntlet-wFQOOzXB51R3ebr-featurebase-cluster-1",
              "Prefix": "gauntlet-wFQOOzXB51R3ebr",
              "Role": "cluster_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09c4419bed8bf5876"
            ]
          },
          "dependencies": [
            "module.samsung-cluster.aws_iam_instance_profile.fb_cluster_node_profile",
            "module.samsung-cluster.aws_iam_role.fb_cluster_node_role",
            "module.samsung-cluster.aws_key_pair.gitlab-featurebase-ci",
            "module.samsung-cluster.aws_security_group.featurebase",
            "module.samsung-cluster.data.aws_ami.amazon_linux_2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b09f36be67d32fff",
            "arn": "arn:aws:ec2:us-east-2:977373308795:instance/i-0db45f32178ab7fa7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-090a2fe1dc5701335",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "gauntlet-wFQOOzXB51R3ebr-fb_cluster_node_profile",
            "id": "i-0db45f32178ab7fa7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.xlarge",
            "ipv6_address_count": 0,
            "key_name": "gauntlet-wFQOOzXB51R3ebr-gitlab-ci",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0a39a93f26db70f1b",
            "private_dns": "ip-10-0-3-251.us-east-2.compute.internal",
            "private_ip": "10.0.3.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04ca311d0f009fbd4",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07155281789c6d33b",
            "tags": {
              "Name": "gauntlet-wFQOOzXB51R3ebr-featurebase-cluster-2",
              "Prefix": "gauntlet-wFQOOzXB51R3ebr",
              "Role": "cluster_node"
            },
            "tags_all": {
              "Name": "gauntlet-wFQOOzXB51R3ebr-featurebase-cluster-2",
              "Prefix": "gauntlet-wFQOOzXB51R3ebr",
              "Role": "cluster_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09c4419bed8bf5876"
            ]
          },
          "dependencies": [
            "module.samsung-cluster.aws_iam_instance_profile.fb_cluster_node_profile",
            "module.samsung-cluster.aws_iam_role.fb_cluster_node_role",
            "module.samsung-cluster.aws_key_pair.gitlab-featurebase-ci",
            "module.samsung-cluster.aws_security_group.featurebase",
            "module.samsung-cluster.data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "module": "module.samsung-cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fb_ingest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b09f36be67d32fff",
            "arn": "arn:aws:ec2:us-east-2:977373308795:instance/i-02d2e54ebcc03d50f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-0f3f70d88829a6b81",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "gauntlet-wFQOOzXB51R3ebr-fb_cluster_node_profile",
            "id": "i-02d2e54ebcc03d50f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.large",
            "ipv6_address_count": 0,
            "key_name": "gauntlet-wFQOOzXB51R3ebr-gitlab-ci",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-087162265d04f2649",
            "private_dns": "ip-10-0-101-116.us-east-2.compute.internal",
            "private_ip": "10.0.101.116",
            "public_ip": "3.144.13.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c996c15a2fbed5da",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066b4b922b54e51a2",
            "tags": {
              "Name": "gauntlet-wFQOOzXB51R3ebr-featurebase-ingest-0",
              "Prefix": "gauntlet-wFQOOzXB51R3ebr",
              "Role": "ingest_node"
            },
            "tags_all": {
              "Name": "gauntlet-wFQOOzXB51R3ebr-featurebase-ingest-0",
              "Prefix": "gauntlet-wFQOOzXB51R3ebr",
              "Role": "ingest_node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0426fd89db464e42d"
            ]
          },
          "dependencies": [
            "module.samsung-cluster.aws_iam_instance_profile.fb_cluster_node_profile",
            "module.samsung-cluster.aws_iam_role.fb_cluster_node_role",
            "module.samsung-cluster.aws_key_pair.gitlab-featurebase-ci",
            "module.samsung-cluster.aws_security_group.ingest",
            "module.samsung-cluster.data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "module": "module.samsung-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "featurebase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:977373308795:security-group/sg-09c4419bed8bf5876",
            "description": "Allow featurebase inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c4419bed8bf5876",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp from Anywhere",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "etcd from internal 2",
                "from_port": 10401,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10401
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "etcd from internal",
                "from_port": 10301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10301
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.31.0.0/16"
                ],
                "description": "GRPC from Internal",
                "from_port": 20101,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20101
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.31.0.0/16"
                ],
                "description": "HTTP from Internal",
                "from_port": 10101,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10101
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.31.0.0/16"
                ],
                "description": "PostgreSQL from Internal",
                "from_port": 55432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 55432
              }
            ],
            "name": "gauntlet-wFQOOzXB51R3ebr-allow_featurebase",
            "name_prefix": "",
            "owner_id": "977373308795",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_featurebase"
            },
            "tags_all": {
              "Name": "allow_featurebase"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a26a122f961dc2b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.samsung-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:977373308795:security-group/sg-0426fd89db464e42d",
            "description": "Allow ingest inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0426fd89db464e42d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10101,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10101
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp from Anywhere",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "gauntlet-wFQOOzXB51R3ebr-allow_ingest",
            "name_prefix": "",
            "owner_id": "977373308795",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ingest"
            },
            "tags_all": {
              "Name": "allow_ingest"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a26a122f961dc2b"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}